[gd_scene format=3 uid="uid://cbxiodylo8f2m"]

[ext_resource type="Script" uid="uid://b31gi8ffyv8qx" path="res://src/ui/menus/start_menu/start_menu.gd" id="1_04v0p"]
[ext_resource type="Script" uid="uid://j2u6nmkviy8n" path="res://src/ui/menus/start_menu/ip_input.gd" id="2_kv31j"]
[ext_resource type="Script" uid="uid://dgi4y3i10lqln" path="res://src/ui/menus/start_menu/waiting_screen.gd" id="3_3ukv6"]
[ext_resource type="Texture2D" uid="uid://cyfdnxfyann2y" path="res://asset/texture/ui/SettingIconNormal.png" id="4_0a877"]
[ext_resource type="Texture2D" uid="uid://bt5mkbnij2owi" path="res://asset/texture/ui/SettingIconPressed.png" id="5_i767y"]
[ext_resource type="Texture2D" uid="uid://dbff4y3y74scu" path="res://asset/texture/ui/SettingIconHover.png" id="6_m02bj"]
[ext_resource type="Script" uid="uid://c77ctiskmh5ov" path="res://src/ui/menus/start_menu/version_label.gd" id="6_srgnp"]
[ext_resource type="PackedScene" uid="uid://chxbo7x5lv5lq" path="res://src/ui/menus/setting_menu/setting_menu.tscn" id="7_i767y"]
[ext_resource type="PackedScene" uid="uid://dk7xha40tm5fl" path="res://src/ui/menus/map_selector/map_selector.tscn" id="8_srgnp"]

[node name="StartMenu" type="Control" unique_id=1207808367]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_04v0p")

[node name="Main" type="CanvasLayer" parent="." unique_id=208550603]

[node name="Main" type="Control" parent="Main" unique_id=926552556]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Main/Main" unique_id=943230497]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Main/CenterContainer" unique_id=928045841]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Main/Main/CenterContainer/VBoxContainer" unique_id=430603081]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "[wave] Battleship [color=#6a90c0][b]Plus[/b][/color] [/wave]"
fit_content = true
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="Main/Main/CenterContainer/VBoxContainer" unique_id=1731987356]
layout_mode = 2

[node name="HostButton" type="Button" parent="Main/Main/CenterContainer/VBoxContainer" unique_id=2010206227]
layout_mode = 2
text = "HOST"

[node name="JoinButton" type="Button" parent="Main/Main/CenterContainer/VBoxContainer" unique_id=1306670938]
layout_mode = 2
text = "JOIN"

[node name="IPEdit" type="LineEdit" parent="Main/Main/CenterContainer/VBoxContainer" unique_id=518971839]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("2_kv31j")
invalid_color = Color(0.8666667, 0, 0, 1)

[node name="BottomRight" type="MarginContainer" parent="Main/Main" unique_id=203393263]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SettingButton" type="TextureButton" parent="Main/Main/BottomRight" unique_id=2055443325]
layout_mode = 2
texture_normal = ExtResource("4_0a877")
texture_pressed = ExtResource("5_i767y")
texture_hover = ExtResource("6_m02bj")
ignore_texture_size = true
stretch_mode = 5

[node name="BottomLeft" type="MarginContainer" parent="Main/Main" unique_id=1238106101]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VersionLabel" type="Label" parent="Main/Main/BottomLeft" unique_id=1970199063]
layout_mode = 2
script = ExtResource("6_srgnp")

[node name="Setting" type="CanvasLayer" parent="." unique_id=567886365]

[node name="SettingMenu" parent="Setting" unique_id=1947352906 instance=ExtResource("7_i767y")]
visible = false

[node name="MapSelector" type="CanvasLayer" parent="." unique_id=680114035]

[node name="MapSelector" parent="MapSelector" unique_id=936317204 instance=ExtResource("8_srgnp")]
unique_name_in_owner = true
visible = false

[node name="WaitingScreen" type="Control" parent="." unique_id=377176306]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_3ukv6")

[node name="ColorRect" type="PanelContainer" parent="WaitingScreen" unique_id=154816860]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="WaitingScreen/ColorRect" unique_id=699258244]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="WaitingScreen/ColorRect/CenterContainer" unique_id=2011743124]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="WaitingScreen" unique_id=1410064688]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CancelButton" type="Button" parent="WaitingScreen/MarginContainer" unique_id=275515754]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Cancel"

[connection signal="pressed" from="Main/Main/CenterContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="ready" from="Main/Main/CenterContainer/VBoxContainer/HostButton" to="Main/Main/CenterContainer/VBoxContainer/HostButton" method="grab_focus"]
[connection signal="pressed" from="Main/Main/CenterContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="Main/Main/CenterContainer/VBoxContainer/IPEdit" to="Main/Main/CenterContainer/VBoxContainer/IPEdit" method="_on_text_changed"]
[connection signal="pressed" from="Main/Main/BottomRight/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="map_selected" from="MapSelector/MapSelector" to="." method="_on_map_selected"]
[connection signal="pressed" from="WaitingScreen/MarginContainer/CancelButton" to="WaitingScreen" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="WaitingScreen/MarginContainer/CancelButton" to="WaitingScreen" method="_on_exit_button_pressed"]
